# openfortivpn-connect

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml  update-homebrew.yml
docs/specs/: 2026-04-07-privileged-helper-daemon-design.md
docs/superpowers/specs/: 2026-04-07-icon-customization-design.md  2026-04-07-openfortivpn-gui-design.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/helper/: Cargo.toml
src-tauri/helper/src/: handlers.rs  main.rs  protocol.rs  server.rs  validation.rs
src-tauri/icons/: generate-icons.sh  icon.icns
src-tauri/src/: commands.rs  dns_manager.rs  helper_client.rs  helper_installer.rs  keychain.rs  lib.rs  models.rs  process_manager.rs  profile_store.rs  settings_store.rs  tray.rs  vpn_manager.rs
src/components/: About.tsx  BandwidthChart.tsx  CertDialog.tsx  ConnectionStatus.tsx  DeleteConfirmModal.tsx  HelperInstallDialog.tsx  LogViewer.tsx  ProfileEditor.tsx  ProfileList.tsx  Settings.tsx  TitleBar.tsx  TrustedCertManager.tsx
src/hooks/: useAppVersion.ts  useProfiles.ts  useSettings.ts  useVpnConnection.ts
src/types/: index.ts
