[package]
name = "openvpngui-helper"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "openvpngui-helper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util", "process", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
